@@ -1129,7 +1129,7 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
              "%MAKE-INSTANCE"
 	     "MAKE-VALUE-CELL"
              "MAKE-VALUES-TYPE"
-             "MAYBE-GC" "MEMBER-TYPE" "MEMBER-TYPE-MEMBERS"
+             "MEMBER-TYPE" "MEMBER-TYPE-MEMBERS"
              "MEMBER-TYPE-P" "MERGE-BITS" "MODIFIED-NUMERIC-TYPE"
              "MUTATOR-SELF"
              "NAMED-TYPE" "NAMED-TYPE-NAME" "NAMED-TYPE-P"
@@ -1237,6 +1237,7 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
              "SPECIFIER-TYPE" "STACK-REF"
              "STREAMLIKE" "STRINGABLE"
              "STRUCTURE-RAW-SLOT-TYPE-AND-SIZE"
+	     "SUB-GC"
              "%INSTANCE-LENGTH"
              "%INSTANCE-REF" "%INSTANCE-SET"
              "SYSTEM-AREA-CLEAR"
