@@ -111,7 +111,7 @@
 
     *posix-argv*
 
-    sb!impl::maybe-gc
+    sb!impl::sub-gc
     sb!kernel::internal-error
     sb!kernel::control-stack-exhausted-error
     sb!di::handle-breakpoint
