@@ -152,7 +152,7 @@
     *posix-argv*
 
     ;; functions that the C code needs to call
-    sb!impl::maybe-gc
+    sb!impl::sub-gc
     sb!kernel::internal-error
     sb!kernel::control-stack-exhausted-error
     sb!di::handle-breakpoint
