@@ -201,7 +201,7 @@
     sb!impl::*!initial-fdefn-objects*
 
     ;; functions that the C code needs to call
-    maybe-gc
+    sub-gc
     sb!kernel::internal-error
     sb!kernel::control-stack-exhausted-error
     sb!di::handle-breakpoint
